# geotest

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yaml
src/geotest/: __init__.py  __main__.py
